@@ -438,6 +438,7 @@ extern int      node_prop_list A_(( attribute*, void*, int));
 extern int      node_status_list A_(( attribute*, void*, int));
 extern int      node_note        A_(( attribute*, void*, int));
 extern int      set_note_str     A_((attribute *attr,attribute *new, enum batch_op));
+extern void     replace_attr_string A_((attribute*, char*));
 
 /* Token manipulation functions */
 
