@@ -635,6 +635,13 @@ void req_quejob(
 
       pj->ji_wattr[(int)JOB_ATR_outpath].at_flags |= ATR_VFLAG_SET;
       }
+      else  /* change to show expected output path and filename */
+      {
+      replace_attr_string(&pj->ji_wattr[(int)JOB_ATR_outpath],
+        (add_std_filename(pj, 
+        pj->ji_wattr[(int)JOB_ATR_outpath].at_val.at_str,
+        (int)'o')));
+      }
 
     if (!(pj->ji_wattr[(int)JOB_ATR_errpath].at_flags & ATR_VFLAG_SET)) 
       {
@@ -642,6 +649,13 @@ void req_quejob(
         prefix_std_file(pj,(int)'e');
 
       pj->ji_wattr[(int)JOB_ATR_errpath].at_flags |=ATR_VFLAG_SET;
+      }
+      else  /* change to show expected error path and filename */
+      {
+      replace_attr_string(&pj->ji_wattr[(int)JOB_ATR_errpath],
+        (add_std_filename(pj, 
+        pj->ji_wattr[(int)JOB_ATR_errpath].at_val.at_str,
+        (int)'e')));
       }
 
     if ((pj->ji_wattr[(int)JOB_ATR_outpath].at_val.at_str == NULL) ||
