@@ -39,6 +39,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - handle case where mom replies with an unknown job error to a stat request 
       from the server
   b - allow qalter to modify HELD jobs if BLCR is not enabled
+  b - change to update errpath/outpath attributes when -e -o are used with qsub
   
 2.3.0
   e - redesign how torque.spec is built
